--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,9 @@
 title: "About"
 ---
 
-About this site
+## About Me
+
+My name is **Emmanuil** and I'd rather the tutorial use `cat file` in the terminal
+instead of `show_file("file")`
+
+[Kane's Free Data Science Bootcamp](https://bootcamp.davidkane.info)
